--- a/.github/workflows/deploy-expiration.yaml
+++ b/.github/workflows/deploy-expiration.yaml
@@ -12,12 +12,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: cd expiration && docker build -t briancsingereb/expiration .
+      - run: cd expiration && docker build -t bsnpm/expiration .
       - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-      - run: docker push briancsingereb/expiration
+      - run: docker push bsnpm/expiration
       - uses: digitalocean/action-doctl@v2
         with:
           token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
