--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: auth
-          image: briancsingereb/auth
+          image: hscript/auth
           # image: us.gcr.io/ticketing-dev-278510/auth
           env:
             - name: MONGO_URI
