--- a/infra/savingforlater/orders-depl.yaml
+++ b/infra/savingforlater/orders-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: orders
-          image: briancsingereb/orders
+          image: bsnpm/orders
           # image: us.gcr.io/ticketing-dev-278510/orders
           env:
             - name: MONGO_URI
