--- a/infra/savingforlater/payments-depl.yaml
+++ b/infra/savingforlater/payments-depl.yaml
@@ -14,11 +14,11 @@ spec:
     spec:
       containers:
         - name: payments
-          image: briancsingereb/payments
+          image: bsnpm/payments
           # image: us.gcr.io/ticketing-dev-278510/payments
           env:
             - name: MONGO_URI
-              value: "mongodb://payments-mongo-srv:27017/payments"
+              value: 'mongodb://payments-mongo-srv:27017/payments'
             - name: JWT_KEY
               valueFrom:
                 secretKeyRef:
@@ -30,7 +30,7 @@ spec:
                   name: stripe-secret
                   key: STRIPE_KEY
             - name: NATS_URL
-              value: "https://nats-srv:4222"
+              value: 'https://nats-srv:4222'
             - name: NATS_CLUSTER_ID
               value: ticketing
             - name: NATS_CLIENT_ID
