--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -15,7 +15,15 @@ build:
         dockerfile: Dockerfile
       sync:
         manual:
-          - src: 'src/**/*.ts'
+          - src: "src/**/*.ts"
+            dest: .
+    - image: hscript/roles
+      context: roles
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "src/**/*.ts"
             dest: .
     # - image: hscript/client
     #   context: client
