--- a/infra/k8s-dev/ingress-srv.yaml
+++ b/infra/k8s-dev/ingress-srv.yaml
@@ -4,7 +4,7 @@ metadata:
   name: ingress-service
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/use-regex: 'true'
+    nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   rules:
     - host: hscript.dev
@@ -15,6 +15,10 @@ spec:
               serviceName: auth-srv
               servicePort: 3000
           - path: /api/roles/?(.*)
+            backend:
+              serviceName: roles-srv
+              servicePort: 3000
+          - path: /api/roles/?(.*)/?(.*)
             backend:
               serviceName: roles-srv
               servicePort: 3000
