--- a/.github/workflows/tests-roles.yml
+++ b/.github/workflows/tests-roles.yml
@@ -3,11 +3,11 @@ name: tests-roles
 on:
     pull_request:
         paths:
-            - "roles/**"
+            - 'roles/**'
 
 jobs:
     build:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
-            - run: cd auth && npm install && npm run test:ci
+            - run: cd roles && npm install && npm run test:ci
