--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -25,6 +25,14 @@ build:
         manual:
           - src: 'src/**/*.ts'
             dest: .
+    - image: hscript/interviews
+      context: interviews
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: 'src/**/*.ts'
+            dest: .
     - image: hscript/client
       context: client
       docker:
