--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,11 @@
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
     "fontsource-roboto": "^3.0.3",
+    "immutability-helper": "^3.1.1",
     "next": "^9.4.4",
     "react": "^16.13.1",
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.13.1"
   }
 }
