--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.2",
     "fontsource-roboto": "^3.0.3",
     "immutability-helper": "^3.1.1",
+    "material-ui-chip-input": "^2.0.0-beta.2",
     "next": "^9.4.4",
     "react": "^16.13.1",
     "react-dnd": "^11.1.3",
