--- a/roles/package.json
+++ b/roles/package.json
@@ -23,12 +23,14 @@
     "@types/cookie-session": "^2.0.40",
     "@types/express": "^4.17.6",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/lodash": "^4.14.161",
     "@types/mongoose": "^5.7.21",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.5.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
     "mongoose": "^5.9.16",
     "mongoose-update-if-current": "^1.4.0",
     "node-nats-streaming": "^0.3.2",
