updated dashboard ui and created scrip tlist

--- a/infra/k8s/client-depl.yaml
+++ b/infra/k8s/client-depl.yaml
@@ -15,6 +15,9 @@ spec:
       containers:
         - name: client
           image: hscript/client
+          env:
+            - name: FOO
+              value: "BAR"
 ---
 apiVersion: v1
 kind: Service
